<resources>
    <string name="app_name">Fewchore Pay</string>
    <string name="ok">OK</string>
    <string name="create_n_account">Create \n Account</string>
    <string name="log_in">Log In</string>
    <string name="start_msg">A lot of People and business have  experienced the convenience of personal loans through Fewchore Pay. </string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="recover_here">Recover here</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="verify_text">Please take a moment to verify your phone number. This helps us confirm your identity and secure your account</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_number">Phone Number</string>
    <string name="i_agree_to_the_terms_and_condition">I agree to the terms and conditions</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="log_out">Log Out</string>
    <string name="loan_history">Loan History</string>
    <string name="pay_back">Pay Back</string>
    <string name="borrow_money">Borrow Money</string>
    <string name="dashboard">Dashboard</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bank_details">Bank Details</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_number">Account Number</string>
    <string name="bvn">BVN</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="card_details">Card Details</string>
    <string name="card_number">Long Digit Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cvv">CVV</string>
    <string name="previous">Previous</string>
    <string name="completed">Completed</string>
    <string name="complete_text">Thank you for providing all your bank and card information. We assure you that your details are safe with us.</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="personal_details">Personal Details</string>
    <string name="fullname">FullName</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="account_type">Account Type</string>
    <string name="pay_now">Pay Now</string>
    <string name="loan_details">Loan Details</string>
    <string name="interest_rate">Interest Amount</string>
    <string name="extra_charge">Extra Charge</string>
    <string name="card_type">Card type</string>
    <string name="card_no">Card Number</string>
    <string name="no_card">No card. \n Click on the Add Button to add Card</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="total">Total</string>
    <string name="edit_bank_details">Edit Bank details</string>
    <string name="request_text">Please confirm you are ready to request for this loan</string>
    <string name="input_your_password">Input your Fewchore Pay Password</string>
    <string name="register">Register</string>
    <string name="slider2">A lot of people and businesses have experienced   the convenience of personal loans through FewChore</string>
    <string name="slider1">Low interest rate, Single monthly payment, No hidden charges or Prepayment penalties</string>
    <string name="trust_loan_providers">Trusted Loan Providers</string>
    <string name="borrow_with_ease">Borrow with Ease</string>
    <string name="request_for_loan">Request for Loan</string>
    <string name="lastname">Last name</string>
    <string name="firstname">First name</string>
    <string name="verify_account">Verify <b>Phone Number</b> </string>
    <string name="verification">Please enter your account number for verification.</string>
    <string name="verify">Verify</string>
    <string name="amount">Amount</string>
    <string name="duration">Duration</string>
    <string name="interest">Interest</string>
    <string name="status">Status</string>
    <string name="morning">Good Morning,</string>
    <string name="afternoon">Good Afternoon,</string>
    <string name="evening">Good Evening,</string>
    <string name="max_50_000">50,000.00</string>
    <string name="dash">--</string>
    <string name="get_your_first_loan_now">Get your first loan Now</string>
    <string name="welcome_texts">You are eligible for \n additional loan up to ₦200,000. \n Apply now and get money in your account within minutes</string>
    <string name="take_a_loan">Take a loan</string>
    <string name="reset_msg">Please enter a valid Email Address so that a verification code can be sent to you</string>
    <string name="passwrd_setup">Pleasee fill enter the code sent to you via email/SMS and enter your new password details</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="verify_phone_number">Verify Phone Number</string>
    <string name="you_don_t_have_any_loan_history_yet">You don\'t have any Loan History yet</string>
    <string name="reset_your_password">Reset your Password</string>
    <string name="due_date">Due Date</string>
    <string name="_45_45_45_45">-----</string>
    <string name="loan_taken">Loan taken</string>
    <string name="approval">Your Loan request is awaiting Approval. One of our Agents will get in touch with you once a decision has been made </string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="active">Active</string>
    <string name="total_amount">Total Amount</string>
    <string name="eligibility">You are eligible to loan up to</string>
    <string name="pin_request">Pin request</string>
    <string name="forgot_mpin">Forgot mPIN?</string>
    <string name="memorable_four">Enter a memorable four digit PIN, that you can use to see your dashboard. Please keep it safe</string>
    <string name="enter_new_pin">Enter new PIN</string>
    <string name="reset_pin">Reset PIN</string>
    <string name="setup_your_pin">Setup your PIN</string>
    <string name="enter_your_four_digit_pin_for_verification">Enter your Four Digit PIN for Verification</string>
    <string name="verify_your_pin">Verify your PIN</string>
    <string name="verify_mobile_pin">Verify <b>Mobile Pin</b></string>
    <string name="profile">Profile</string>
    <string name="account_name">Account Name</string>
    <string name="set_up_mpin">Set up your Mobile PIN</string>
    <string name="returning_customers">Returning customers</string>
    <string name="new_customers">New customers</string>
    <string name="loan_offer_approval">Loan Offer Approval</string>
    <string name="accept_loan">Accept Loan</string>
    <string name="reject_loan">Reject Loan</string>
    <string name="you_have_not_history">You have no Loan History</string>
    <string name="enter_pin">Enter your 4 digit Mobile PIN</string>
    <string name="paid">Paid</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="loan">Loan</string>
    <string name="pay">Pay</string>
    <string name="rejected">Rejected</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_investor_home">InvestorHomeActivity</string>
    <string name="investment_history">Investment history</string>
    <string name="invest_now">Invest Now</string>
    <string name="my_investments">My Investments</string>
    <string name="Invest">Invest</string>
    <string name="start_investing_now">Start Investing Now</string>
    <string name="invest_msg">You can start investing with as low as N50,000 and Earn up to 16.5%</string>
    <string name="get_started">Get Started</string>
    <string name="new_investment">New Investment</string>
    <string name="name_of_plan">Name of Plan</string>
    <string name="short_description">Short Description</string>
    <string name="welcome_to_fewchore_pay">Welcome to Fewchore Pay</string>
    <string name="selected_msg">Please select one of the following \n options</string>
    <string name="make_investment">Make \n Investment</string>
    <string name="minimum_investment">Minimum Investment</string>
    <string name="proceed">Proceed</string>
    <string name="_14">14%</string>
    <string name="plan">Plan</string>
    <string name="invested">Invested</string>
    <string name="total_earnings">Total Earnings</string>
    <string name="active_investments">Active Investments</string>
    <string name="invested_amount">Invested Amount</string>
    <string name="no_available_investment_history">No available investment history</string>
    <string name="date_created">Date created</string>
    <string name="withdraw_investment">Withdraw Investment</string>
    <string name="withdraw_msg">Are you sure you want to withdraw your investment?</string>
    <string name="forfeit_msg">Kindly note that if you withdraw your \n investment before your Maturity date,\n you will lose your  interest</string>
    <string name="see_more">See more</string>
    <string name="ends">Ends..................................</string>
    <string name="invest__msg">Please confirm you are ready to make an Investment</string>
    <string name="main_menu">Main menu</string>
    <string name="general_terms_and_conditions">GENERAL TERMS AND CONDITIONS</string>
    <string name="select_a_bank_to_complete_your_transaction">Select a Bank to complete your transaction</string>
    <string name="read_terms_and_condition">Read <b>terms and condition</b></string>
    <string name="activate_account">Activate Account</string>
    <string name="card_pin">Card Pin</string>
    <string name="otp">OTP</string>
    <string name="kindly_enter_otp_sent_to_your_registered_mobile_phone">Kindly enter OTP sent to your registered mobile phone</string>
    <string name="official_email">Official Email</string>
    <string name="office_address">Office Address</string>
    <string name="msg"><![CDATA[<b><font color=#FF0000>A Non-refundable credit search fee of N100 applies and will be charged to your card.</font></b>]]></string>
    <string name="employer">Employer</string>
    <string name="home_address">Home Address</string>
    <string name="loan_duration">Duration</string>
    <string name="select_a_card_to_make_your_payment">Select a card to make your payment</string>
    <string name="look_up_cards">Please select any of your cards and activate it. This will only be used when your loan deduction was not successful in your primary card</string>
    <string name="submit_otp">Submit OTP</string>
    <string name="for_salary_earners_only">FOR SALARY EARNERS ONLY</string>
</resources>
