<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <include layout="@layout/template_bck_"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

<LinearLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20sp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintVertical_bias="0.7">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <fewchore.com.exolve.fewchore.views.PoppinsEditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">
        <fewchore.com.exolve.fewchore.views.PoppinsEditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_gravity="center">
        <fewchore.com.exolve.fewchore.views.PoppinsTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="12sp"/>

        <fewchore.com.exolve.fewchore.views.PoppinsBoldTextView
            android:id="@+id/buttonReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recover_here"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" />
    </LinearLayout>


        <fewchore.com.exolve.fewchore.views.PoppinsButton
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:background="@drawable/rectangle_green"
            android:textColor="@color/white"
            android:text="@string/log_in"/>

    <fewchore.com.exolve.fewchore.views.PoppinsButton
        android:id="@+id/buttonVerify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_account"
        android:layout_gravity="center"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:minHeight="2dp"
        android:background="@android:color/transparent"/>

    <fewchore.com.exolve.fewchore.views.PoppinsButton
        android:id="@+id/buttonMPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_mobile_pin"
        android:layout_gravity="center"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:minHeight="2dp"
        android:background="@android:color/transparent"/>


</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="10dp">
        <fewchore.com.exolve.fewchore.views.PoppinsTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textSize="12sp"/>

        <fewchore.com.exolve.fewchore.views.PoppinsBoldTextView
            android:id="@+id/buttonSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" />
    </LinearLayout>
<LinearLayout
    android:id="@+id/overlay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_light"
    android:visibility="gone"
    android:orientation="horizontal"/>
    <include layout="@layout/template_progress"/>
</android.support.constraint.ConstraintLayout>