<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:minHeight="200dp"
    android:minWidth="300dp"
    android:padding="10dp"
    android:layout_margin="10dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kindly_enter_otp_sent_to_your_registered_mobile_phone"
        android:textSize="18sp"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:textAlignment="center" />
    <EditText
        android:id="@+id/editOtp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/otp"
        android:padding="8dp"
        android:inputType="number"/>
    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/submit_otp"
        android:background="@drawable/rectangle_green"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:layout_marginTop="20dp"/>

</LinearLayout>